# rocket-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: audit.yaml  cargo-publish.yaml  code-coverage.yaml  tests.yaml
demo/: Cargo.toml
demo/src/: main.rs
demo/src/fairings/: mod.rs
demo/src/routes/: mod.rs
src/: lib.rs  main.rs
src/commands/: mod.rs  new.rs  run.rs
src/templates/: mod.rs
src/templates/common/: files.rs
src/templates/minimal/: files.rs  manifest.rs  mod.rs
src/templates/mongo_db/: files.rs  manifest.rs
src/templates/postgres/: files.rs  manifest.rs  mod.rs
tests/: load_template.rs
