[package]
name = "rocket-cli"
description = "A fast, ergonomic command-line interface (CLI) for scaffolding and running [Rocket](https://rocket.rs) web applications in Rust. Spin up production-ready APIs in seconds with idiomatic project structure and database-backed templates."
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/irfanghat/rocket-cli"
keywords = ["cli", "rocket", "rust", "scaffold", "rbatis", "web"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
authors = ["<irfanghat@gmail.com> Irfan Ghat"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
handlebars = { version = "6.3.2", features = ["dir_source"] }
is-terminal = "0.4.16"
log = "0.4.27"